fix: loop-8 correctness fixes — Q1/Q10/Q13
- RequestQueueClient: null-coalesce BatchDeleteResult's list getters and
  RequestQueueRequest.getErrorMessages() to avoid NPEs on an explicit JSON
  null, mirroring BatchAddResult.
- RunClient.metamorph: normalize targetActorId via ResourceContext.toSafeId
  before sending (matches the reference client's _toSafeId); update the
  offline mock test's expected query param.
- RunClient.metamorph/resurrect and ActorClient.build: throw a clear
  IllegalArgumentException on a null required options argument instead of an
  NPE deep inside the method.
- RunClient's default log-redirection prefix now uses the resolved run's real
  id instead of the field id (which is the literal "last" for a runs/last
  accessor).
- Box ActorRunOptions.timeoutSecs/memoryMbytes/diskMbytes (Long) so an unset
  value is distinguishable from 0, matching the boxed sibling fields.